# FOC

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE
code/abstraction/CMSIS/: CmakeLists.txt
code/abstraction/CMSIS/src/: _cmsis_init_.c
code/abstraction/STM32G4xx_HAL_Driver/: CMakeLists.txt
code/abstraction/bsp/: CmakeLists.txt
code/abstraction/bsp/Inc/: bsp.h  bsp_adc.h  bsp_cordic.h  bsp_dma.h  bsp_gpio.h  bsp_hrtim.h  bsp_rcc.h  bsp_spi.h  bsp_tim.h
code/abstraction/bsp/Src/: bsp.cpp  bsp_adc.cpp  bsp_cordic.cpp  bsp_dma.cpp  bsp_gpio.cpp  bsp_hrtim.cpp  bsp_rcc.cpp  bsp_spi.cpp  bsp_tim.cpp
code/abstraction/module/: CmakeLists.txt
code/abstraction/module/Inc/: encoder.h  module.h  softTimer.h  temperature.h
code/abstraction/module/Src/: encodder.cpp  softTimer.cpp  temperature.cpp
code/core/: main.cpp  stm32g4xx_hal_msp.c
code/core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
code/core/Src/: main.cpp  stm32g4xx_it.c
code/core/config/: bsp_config.h  config.h  status.h
doc/: adc.md  adc_dma_configuration.md  encoder.md  hrtim.md  openocd.md  spi.md  stspin32g4.md  toolchain.md
toolchain/: STM32G474VETx_FLASH.ld
toolchain/cmake/: arm_none_eabi.cmake  complie.cmake  config.cmake  cortex_m4f.cmake  custom_rule.cmake
toolchain/openocd_scripts/: openocd-stm32f4-stlink.cfg  openocd-stm32g4-daplink.cfg  openocd-stm32g4-jlink.cfg  openocd-stm32g4-stlink.cfg
